# Chatterbox-Finetune

./: README.md  inference_helper.py  pyproject.toml
src/: finetune_s3gen.py  finetune_t3.py
